--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,13 @@
    <meta charset='utf-8'>
   <title> {% block title %}{% endblock %} </title>
   <link rel="stylesheet" href="../static/stylesheets/style.css">
+ <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <!--Loads nice Reddit Style Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
 </header>
-<body>
+<body class = "reddit-mono-basic">
   {% block body %}
   {% endblock %}
 </body>
