--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<header>
+<head>
    <meta charset='utf-8'>
   <title> {% block title %}{% endblock %} </title>
   <link rel="stylesheet" href="../static/stylesheets/style.css">
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
-</header>
+</head>
 <body class = "reddit-mono-basic">
   {% block body %}
   {% endblock %}
