--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -2,28 +2,41 @@
   --pastel-yellow: #f3d250;
   --pastel-pink: #f4a8ae;
   --pastel-blue: #a4c2f4;
+  --pastel-green: #92d7c2;
+  --pastel-orange: #fcab85;
+  --pastel-purple: #d9b3e2;
 }
-
 /* Pastel color highlighting */
 .highlight-yellow {
   background-color: var(--pastel-yellow);
   padding: 2px 4px; /*Size of the highlighting*/
    display: inline; /* Display the span as inline */
 }
-
 .highlight-pink {
   background-color: var(--pastel-pink);
   padding 2px 4px;
   display:inline;
 }
-
 .highlight-blue {
   background-color: var(--pastel-blue);
   padding 2px 4px;
   display:inline;
 }
-
-
+.highlight-green {
+  background-color: var(--pastel-green);
+  padding 2px 4px;
+  display:inline;
+}
+.highlight-orange{
+  background-color: var(--pastel-orange);
+  padding 2px 4px;
+  display:inline;
+}
+.highlight-purple{
+  background-color: var(--pastel-purple);
+  padding 2px 4px;
+  display:inline;
+}
 /*Simple Font Rule*/
 .reddit-mono-basic {
   font-family: "Reddit Mono", monospace;
@@ -59,4 +72,28 @@
 
 #foot p {
     padding-right:10px; /*Space btwn para and link*/
+}
+
+#spacer {
+    margin-bottom:30px;
+}
+
+.twenty-margin {
+    margin:20px;
+}
+
+#go-home a {
+    color: blue;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+#go-home a:hover {
+    color:  var(--pastel-pink);
+    text-decoration: underline;
+}
+
+.issue {
+    font-style: italic;
+    padding-right: 10px;
 }
