--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{%extends 'base.html' %}
+
+{% block title %}Ladle About {% endblock %}
+
+{% block body %}
+<div id = "top">
+   <h1> Ladle's Purpose </h1>
+    <p class ="highlight-blue">Designed for curious minds</p>
+</div>
+<div>
+    <p>Ladle is designed from the ground up to be minimalist yet highly useful.<p>
+        <p>By choosing a subreddit specific list, seeing the title and rating of content and not engaging with the endless scrolling
+    you can take the benefits of open discussion, varied communities, and insightful topics without the overload and distraction of the main site.</p>
+   <p> This project is open source, and you can create <b>own</b> virtual bot which facilitates this content for you, taking complete control of your data and feed.</p>
+</div>
+<hr>
+<br>
+<div id ="foot">
+   <p> See my GitHub for other projects: </p>
+   <a href="https://github.com/pqba" class="github-link" target="_blank">
+   <img src="../static/github_icon.png" alt="GitHub" class="github-img">
+   </a>
+</div>
+{% endblock %}
