--- a/templates/404.html
+++ b/templates/404.html
@@ -15,7 +15,7 @@
 <div id ="foot" class="twenty-margin">
    <p class ="issue"> Open an issue to describe your problem: </p>
    <a href="https://github.com/pqba/Ladle/issues" class="github-link" target="_blank">
-   <img src="../static/github_icon.png" alt="GitHub" class="github-img">
+   <img src="../static/images/github_icon.png" alt="GitHub Icon" class="github-img">
    </a>
 </div>
 {% endblock %}
