--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
 <div id ="foot">
    <p> See my GitHub for other projects: </p>
    <a href="https://github.com/pqba" class="github-link" target="_blank">
-   <img src="../static/github_icon.png" alt="GitHub" class="github-img">
+   <img src="../static/images/github_icon.png" alt="GitHub" class="github-img">
    </a>
 </div>
 {% endblock %}
