Ladle v0.8.5, subreddit and user pages
Add nh3 for sanitization, update dependencies used, validate sub,user,and post in stew_bot, update 404 template and use for user and subreddit routes in app, add request about.json for subreddit, change port to 7150, add info to README about libraries and port.

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,6 +11,9 @@
 <p> Head back to the front page:  <a href="/">Home</a>
 </div>
 <div id="spacer"></div>
+<div class ="error-message">
+   <p>{{error}}</p>
+</div>
 <hr>
 <div id ="foot" class="twenty-margin">
    <p class ="issue"> Open an issue to describe your problem: </p>
