Content/render tweaks

--- a/templates/sub_form.html
+++ b/templates/sub_form.html
@@ -9,11 +9,11 @@
 </div>
 <h3 class="highlight-pink">Use Curated Lists</h3>
 <div>
-    <button type="submit" class="curated-button">CS+Math</button>
-    <button type="submit" class="curated-button">Music</button>
-    <button type="submit" class="curated-button">Art</button>
-    <button type="submit" class="curated-button">Health</button>
-    <button type="submit" class="curated-button">Sports</button>
+    <button type="submit" class="curated-button" title="[r/]math,machinelearning,computerscience, calculus, and askmath">CS+Math</button>
+    <button type="submit" class="curated-button" title="[r/]piano,audiophile,guitar,musictheory, wearethemusicmakers">Music</button>
+    <button type="submit" class="curated-button" title="[r/]art,design,diy,painting,photography">Art</button>
+    <button type="submit" class="curated-button" title="[r/]fitness,yoga,nutrition,weightlifting,meditation">Health</button>
+    <button type="submit" class="curated-button" title="[r/]sports,nba,soccer,nfl,mls">Sports</button>
 </div>
 <div>
 
