--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
 <hr>
 <br>
 <div id ="foot">
-   <p> See my GitHub for other projects: </p>
+   <p> See my GitHub for source: </p>
    <a href="https://github.com/pqba" class="github-link" target="_blank">
    <img src="../static/images/github_icon.png" alt="GitHub" class="github-img">
    </a>
