--- a/templates/sub_form.html
+++ b/templates/sub_form.html
@@ -7,7 +7,10 @@
     <h1>Ladle Subreddit List</h1>
     <p class="highlight-orange"><span>Specify which subreddits you wish to view with this form.</span></p>
 </div>
-<h3 class="highlight-pink">Use Curated Lists</h3>
+<div>
+    <h3 class="highlight-blue">Use Curated Lists</h3>
+</div>
+
 <div>
     <button type="submit" class="curated-button" title="[r/]math,machinelearning,computerscience, calculus, and askmath">CS+Math</button>
     <button type="submit" class="curated-button" title="[r/]piano,audiophile,guitar,musictheory, wearethemusicmakers">Music</button>
@@ -16,13 +19,13 @@
     <button type="submit" class="curated-button" title="[r/]sports,nba,soccer,nfl,mls">Sports</button>
 </div>
 <div>
-
+<h3 class="highlight-green">Specify Your Own</h3>
 </div>
-<h3 class="highlight-pink">Specify Your Own</h3>
+
 <div class="subreddit-form twenty-margin">
     <form method="POST" action="/subreddit_list">
         <p class="error-message">{{ err }}</p> <div class="input-group">
-            <label for="sub_1">First Subreddit:</label>
+            <label for="sub_1">First Subreddit:&nbsp;</label>
             <input type="text" id="sub_1" name="sub_1" autocomplete="off" required>
         </div>
         <div class="input-group">
@@ -30,7 +33,7 @@
             <input type="text" id="sub_2" name="sub_2" autocomplete="off" required>
         </div>
         <div class="input-group">
-            <label for="sub_3">Third Subreddit:</label>
+            <label for="sub_3">Third Subreddit:&nbsp;</label>
             <input type="text" id="sub_3" name="sub_3" autocomplete="off" required>
         </div>
         <div class="input-group">
@@ -38,10 +41,13 @@
             <input type="text" id="sub_4" name="sub_4" autocomplete="off" required>
         </div>
         <div class="input-group">
-            <label for="sub_5">Fifth Subreddit:</label>
+            <label for="sub_5">Fifth Subreddit:&nbsp;</label>
             <input type="text" id="sub_5" name="sub_5" autocomplete="off" required>
         </div>
-        <button type="submit" class="curated-button">Submit</button>
+        <div class="submission-btn">
+                    <button type="submit" class="curated-button">Submit</button>
+        </div>
     </form>
+    <p class="smaller-text"><b>Note:</b> enter '.' in a field to browse less than 5 subs.</p>
 </div>
 {% endblock %}
