--- a/templates/user.html
+++ b/templates/user.html
@@ -4,7 +4,7 @@
 {% block body %}
 <div class ="user-container">
     <h2>u/{{person.who}}</h2>
-    <img src="{{ person_icon }}">
+    <img src="{{ person_icon }}" height="32px"/>
     <p class ="user-karma"> Post Karma {{person.l_karma}} Comment Karma {{person.c_karma}}</p>
     <div>
         <h3>Recent Posts</h3>
