--- a/templates/home.html
+++ b/templates/home.html
@@ -5,17 +5,17 @@
 {% block body %}
 <div id = "top">
    <h1> Ladle Mainframe </h1>
-    <p class ="highlight-purple">{{date}} </p>|
+    <p class ="highlight-purple">{{date}} </p>  |
     <p class ="highlight-yellow"><span>Discover curated posts, browse specific subreddit groups, and more!</span></p>
 </div>
 <div id ="spacer"></div>
 <div id = "posts">
-   <p class="highlight-blue" id="curated-header"><span>Curated Posts</span></p>
+   <p class="highlight-blue" id="curated-header">Curated Posts</p>
    <ul>
      {% for post in loadedPosts %}
        <li id="selected-post">
-           <p>{{post[0]}}: {{post[3]}} {{post[1]}} [{{post[2]}}]</p>
-         <a href="/post/{{post[-1]}}">See More</a>
+           <a href="/post/{{post[-1]}}" class="post-link"><p><b>{{post[0]}}</b>  {{post[1]}} </p></a>
+             <img src="/static/images/up-arrow.svg" height="15px"> {{post[3]}} [{{post[2]}}%] | {{post[5]}} comments
        </li>
      {% endfor %}
      <div class="post-link">
