--- a/templates/404.html
+++ b/templates/404.html
@@ -3,22 +3,24 @@
 {% block title %}Ladle 404{% endblock %}
 
 {% block body %}
-<div id = "top">
+<div id="top">
    <h1>Ladle's Lost...</h1>
-     <p class ="highlight-pink"><span>Ladle has encountered an error, the link or page you tried to navigate to doesn't exist on our servers.</span></p>
-</div>
-<div id = "go-home"class="twenty-margin">
-<p> Head back to the front page:  <a href="/">Home</a>
+   <p class="highlight-red"><span>Ladle has encountered an error as the link or page you tried to navigate to doesn't
+         exist on our servers.</span></p>
 </div>
 <div id="spacer"></div>
-<div class ="error-message">
-   <p>{{error}}</p>
+<div id="go-home" class="twenty-margin">
+   <p> Head back to the front page: <a href="/">Home</a>
+   <div class="error-message">
+      <p>{{error}}</p>
+   </div>
 </div>
+<div id="spacer"></div>
 <hr>
-<div id ="foot" class="twenty-margin">
-   <p class ="issue"> Open an issue to describe your problem: </p>
+<div id="foot" class="twenty-margin">
+   <p class="issue smaller-text"> Open an issue to describe your problem: </p>
    <a href="https://github.com/pqba/Ladle/issues" class="github-link" target="_blank">
-   <img src="../static/images/github_icon.png" alt="GitHub Icon" class="github-img">
+      <img src="../static/images/github_icon.png" alt="GitHub Icon" class="github-img">
    </a>
 </div>
 {% endblock %}
