--- a/templates/sub_form.html
+++ b/templates/sub_form.html
@@ -12,19 +12,23 @@
 </div>
 
 <div>
-    <button type="submit" class="curated-button" title="[r/]math,machinelearning,computerscience, calculus, and askmath">CS+Math</button>
-    <button type="submit" class="curated-button" title="[r/]piano,audiophile,guitar,musictheory, wearethemusicmakers">Music</button>
+    <button type="submit" class="curated-button"
+        title="[r/]math,machinelearning,computerscience, calculus, and askmath">CS+Math</button>
+    <button type="submit" class="curated-button"
+        title="[r/]piano,audiophile,guitar,musictheory, wearethemusicmakers">Music</button>
     <button type="submit" class="curated-button" title="[r/]art,design,diy,painting,photography">Art</button>
-    <button type="submit" class="curated-button" title="[r/]fitness,yoga,nutrition,weightlifting,meditation">Health</button>
+    <button type="submit" class="curated-button"
+        title="[r/]fitness,yoga,nutrition,weightlifting,meditation">Health</button>
     <button type="submit" class="curated-button" title="[r/]sports,nba,soccer,nfl,mls">Sports</button>
 </div>
 <div>
-<h3 class="highlight-green">Specify Your Own</h3>
+    <h3 class="highlight-green">Specify Your Own</h3>
 </div>
 
 <div class="subreddit-form twenty-margin">
     <form method="POST" action="/subreddit_list">
-        <p class="error-message">{{ err }}</p> <div class="input-group">
+        <p class="error-message">{{ err }}</p>
+        <div class="input-group">
             <label for="sub_1">First Subreddit:&nbsp;</label>
             <input type="text" id="sub_1" name="sub_1" autocomplete="off" required>
         </div>
@@ -45,7 +49,7 @@
             <input type="text" id="sub_5" name="sub_5" autocomplete="off" required>
         </div>
         <div class="submission-btn">
-                    <button type="submit" class="curated-button">Submit</button>
+            <button type="submit" class="curated-button">Submit</button>
         </div>
     </form>
     <p class="smaller-text"><b>Note:</b> enter '.' in a field to browse less than 5 subs.</p>
