--- a/templates/subreddit.html
+++ b/templates/subreddit.html
@@ -2,14 +2,15 @@
 {% block title %} Ladle r/{{subreddit.name}} {% endblock %}
 
 {% block body %}
-<div class ="subreddit-container">
-    <div class ="subreddit-top">
-    <h2>r/{{subreddit.name}}{% if subreddit.nsfw == true %}
-    <img src="/static/images/warning.svg" height="24px"/>
-    {% endif %}</h2>
+<div class="subreddit-container">
+    <div class="subreddit-top">
+        <h2>r/{{subreddit.name}}{% if subreddit.nsfw == true %}
+            <img src="/static/images/warning.svg" height="24px" />
+            {% endif %}
+        </h2>
 
     </div>
-    <p class ="highlight-purple">{{subreddit.subs}} subscribers</p>
+    <p class="highlight-purple">{{subreddit.subs}} subscribers</p>
 
     <p class="smaller-text">Created on {{subreddit_created}}</p>
     <img src="{{ subreddit_bg }}">
