--- a/templates/500.html
+++ b/templates/500.html
@@ -20,7 +20,7 @@
 <div id="foot" class="twenty-margin">
     <p class="issue smaller-text"> Open an issue to describe the problem: </p>
     <a href="https://github.com/pqba/Ladle/issues" class="github-link" target="_blank">
-        <img src="../static/images/github_icon.png" alt="GitHub Icon" class="github-img">
+            <div class="github-icon"></div>
     </a>
 </div>
 {% endblock %}
