--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
 <div id="foot">
   <p> See my GitHub for other projects: </p>
   <a href="https://github.com/pqba" class="github-link" target="_blank">
-    <img src="../static/images/github_icon.png" alt="GitHub" class="github-img">
+    <div class="github-icon"></div>
   </a>
 </div>
 {% endblock %}
