Undo batches (slower?), upd user.html and plans

--- a/templates/user.html
+++ b/templates/user.html
@@ -6,6 +6,7 @@
     <h2>u/{{person.who}}</h2>
     <img src="{{ person_icon }}" height="32px" />
     <p class="user-karma highlight-green"> <b>Karma:</b> {{person.l_karma}}  for posts | {{person.c_karma}} for comments </p>
+    <p>Account created <span class="highlight-orange">{{person_made}}</span> </p>
     <div id="spacer"></div>
     <div>
         <h3>Recent Posts</h3>
